<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sing"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".fragment.register.RegistrationFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="90dp"
        android:drawableStart="@drawable/ic_check"
        android:text="Lifetrack"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/number_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="166dp"
        android:background="@drawable/rectangle_background"
        android:hint="@string/number"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:imeOptions="actionDone"
        android:inputType="phone"
        android:padding="16dp" />

    <EditText
        android:id="@+id/code_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_background"
        android:hint="@string/code"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:padding="16dp" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_background"
        android:hint="**********"
        android:inputType="phone"
        android:padding="16dp"
        android:textColorHint="@color/black" />

    <EditText
        android:id="@+id/confirm_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/rectangle_background"
        android:hint="**********"
        android:textColorHint="@color/black"
        android:inputType="phone"
        android:padding="16dp" />


    <Button
        android:id="@+id/shed_number_btn"
        android:layout_width="326dp"
        android:layout_height="44dp"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/oval"
        android:backgroundTint="@color/purple_200"
        android:text="@string/send_phone_number"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/shed_code_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/submit_code" />

    <TextView
        android:layout_width="match_parent"
        android:text="Already using Lifetrack? "
        android:textAlignment="center"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log in "
        android:textAlignment="center"
        android:layout_marginEnd="36dp"
        android:textColor="@color/purple_200"
        android:textSize="18sp"/>


</LinearLayout>